refactor: minor changes

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -20,10 +20,10 @@
               <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
             </a>
           </div>
-          <nav class="navigation">
+          <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link menu__link--active" href="">about</a>
+                <a class="menu__link menu__link--active" href="javascript:void(0)">about</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="/pages/map/map.html">map</a>
@@ -49,7 +49,7 @@
             <h2 class="hero-heading">Watch your favorite animal ONLINE</h2>
           </div>
           <div class="watch-your-favourite-animal__button">
-            <a class="button button--play" href="/pages/zoos/panda/panda.html"><img src="/assets/icons/buttons/button-play.svg" alt="" /> Play</a>
+            <a class="button button--play" href="/pages/zoos/panda/panda.html"> <img src="/assets/icons/buttons/button-play.svg" alt="" /> Play</a>
           </div>
         </div>
       </div>
@@ -93,7 +93,9 @@
           <h2 class="heading">pets in zoo</h2>
           <div class="slider-box__wrapper">
             <div class="slider-box">
-              <button class="arrow arrow-left"><img src="/assets/icons/buttons/arrow-left.svg" alt="" /></button>
+              <button class="arrow arrow-left">
+                <img src="/assets/icons/buttons/arrow-left.svg" alt="" />
+              </button>
               <div class="cards">
                 <div class="card-wrapper">
                   <a class="card" href="/pages/zoos/panda/panda.html">
@@ -176,7 +178,9 @@
                   </a>
                 </div>
               </div>
-              <button class="arrow arrow-right"><img src="/assets/icons/buttons/arrow-right.svg" alt="" /></button>
+              <button class="arrow arrow-right">
+                <img src="/assets/icons/buttons/arrow-right.svg" alt="" />
+              </button>
             </div>
           </div>
         </div>
@@ -211,7 +215,9 @@
           <h2 class="heading">testimonials</h2>
           <div class="feedback-slider-box_wrapper">
             <div class="feedback-slider-box">
-              <button class="arrow arrow-left"><img src="/assets/icons/buttons/arrow-left.svg" alt="" /></button>
+              <button class="arrow arrow-left">
+                <img src="/assets/icons/buttons/arrow-left.svg" alt="" />
+              </button>
               <div class="feedback__card-wrapper">
                 <div class="feedback__card">
                   <img class="person-image" src="/assets/images/testimonials/karen.jpg" alt="Karen" />
@@ -286,10 +292,18 @@
             <div class="footer-nav-block">
               <nav class="footer-nav">
                 <ul class="menu footer-menu">
-                  <li class="menu__item footer-menu-item"><a class="menu__link" href="#">about</a></li>
-                  <li class="menu__item footer-menu-item"><a class="menu__link" href="/pages/404/404-not-found.html">contact us</a></li>
-                  <li class="menu__item footer-menu-item"><a class="menu__link" href="/pages/map/map.html">map</a></li>
-                  <li class="menu__item footer-menu-item"><a class="menu__link" href="/pages/404/404-not-found.html">feedback</a></li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="#">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="/pages/map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="/pages/404/404-not-found.html">feedback</a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -320,8 +334,12 @@
           </div>
           <div class="footer-credentials">
             <div class="schools-logo">
-              <a class="rss-logo" href="javascript:void(0)" title="Rolling Scopes School"><img src="/assets/icons/logo/rss-logo.svg" alt="" /></a>
-              <a class="yd-logo" href="javascript:void(0)" title="Yem Digital"><img src="/assets/icons/logo/yd-logo.svg" alt="" /></a>
+              <a class="rss-logo" href="javascript:void(0)" title="Rolling Scopes School">
+                <img src="/assets/icons/logo/rss-logo.svg" alt="" />
+              </a>
+              <a class="yd-logo" href="javascript:void(0)" title="Yem Digital">
+                <img src="/assets/icons/logo/yd-logo.svg" alt="" />
+              </a>
             </div>
             <div class="footer-copyright">
               <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
