--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -59,7 +59,7 @@
             </div>
             <div class="map__pet map__pet--alligator">
               <div class="map__icon-container map__icon-container--alligator icon-active">
-                <a class="map__link map__link--alligator" href="/pages/zoos/eagle/alligator.html">
+                <a class="map__link map__link--alligator" href="/pages/zoos/alligator/alligator.html">
                   <img class="map__icon map__icon--alligator" src="/assets/icons/pets/alligator.jpg" alt="alligator" />
                 </a>
               </div>
@@ -69,7 +69,7 @@
             </div>
             <div class="map__pet map__pet--gorilla">
               <div class="map__icon-container map__icon-container--gorilla">
-                <a class="map__link map__link--gorilla" href="/pages/zoos/eagle/gorilla.html">
+                <a class="map__link map__link--gorilla" href="/pages/zoos/gorilla/gorilla.html">
                   <img class="map__icon map__icon--gorilla" src="/assets/icons/pets/gorilla.jpg" alt="gorilla" />
                 </a>
               </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="map__pet map__pet--panda">
               <div class="map__icon-container map__icon-container--panda">
-                <a class="map__link map__link--panda" href="/pages/zoos/eagle/panda.html">
+                <a class="map__link map__link--panda" href="/pages/zoos/panda/panda.html">
                   <img class="map__icon map__icon--panda" src="/assets/icons/pets/panda.jpg" alt="panda" />
                 </a>
               </div>
