feat: add sidebar to Zoos page

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -29,7 +29,7 @@
                 <a class="menu__link" href="/pages/map/map.html">map</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/zoos/zoos.html">zoos</a>
+                <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
