--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -30,7 +30,7 @@
                   <a class="menu__link menu__link--active" href="javascript:void(0)">map</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="/pages/zoos/zoos.html">zoos</a>
+                  <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
@@ -50,7 +50,7 @@
             <div class="map__pet map__pet--eagle">
               <div class="map__icon-container map__icon-container--eagle">
                 <a class="map__link map__link--eagle" href="/pages/zoos/eagle/eagle.html">
-                  <img class="map__icon map__icon--eagle" src="/assets/icons/pets/eagle.jpg" alt="eagle" />
+                  <img class="map__icon map__icon--eagle" src="/assets/icons/pets/eagle.png" alt="eagle" />
                 </a>
               </div>
               <div class="map__mark map__mark--eagle"></div>
@@ -60,7 +60,7 @@
             <div class="map__pet map__pet--alligator">
               <div class="map__icon-container map__icon-container--alligator icon-active">
                 <a class="map__link map__link--alligator" href="/pages/zoos/alligator/alligator.html">
-                  <img class="map__icon map__icon--alligator" src="/assets/icons/pets/alligator.jpg" alt="alligator" />
+                  <img class="map__icon map__icon--alligator" src="/assets/icons/pets/alligator.png" alt="alligator" />
                 </a>
               </div>
               <div class="map__mark map__mark--alligator"></div>
@@ -70,7 +70,7 @@
             <div class="map__pet map__pet--gorilla">
               <div class="map__icon-container map__icon-container--gorilla">
                 <a class="map__link map__link--gorilla" href="/pages/zoos/gorilla/gorilla.html">
-                  <img class="map__icon map__icon--gorilla" src="/assets/icons/pets/gorilla.jpg" alt="gorilla" />
+                  <img class="map__icon map__icon--gorilla" src="/assets/icons/pets/gorilla.png" alt="gorilla" />
                 </a>
               </div>
               <div class="map__mark map__mark--gorilla"></div>
@@ -80,7 +80,7 @@
             <div class="map__pet map__pet--panda">
               <div class="map__icon-container map__icon-container--panda">
                 <a class="map__link map__link--panda" href="/pages/zoos/panda/panda.html">
-                  <img class="map__icon map__icon--panda" src="/assets/icons/pets/panda.jpg" alt="panda" />
+                  <img class="map__icon map__icon--panda" src="/assets/icons/pets/panda.png" alt="panda" />
                 </a>
               </div>
               <div class="map__mark map__mark--panda"></div>
