--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -26,10 +26,10 @@
                 <a class="menu__link" href="/pages/main/index.html">about</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link menu__link--active" href="javascript:void(0)">map</a>
+                <a class="menu__link" href="/pages/map/map.html">map</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/zoos/zoos.html">zoos</a>
+                <a class="menu__link menu__link--active" href="javascript:void(0)">zoos</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
@@ -43,7 +43,70 @@
       </div>
     </header>
     <main class="main">
-      <div class="container content">
+      <aside class="sidebar">
+        <ul class="sidebar-menu">
+          <li class="sidebar-icon">
+            <div class="icon-container">
+            <a href="/pages/zoos/alligator/">
+                <img class="icon-img" src="/assets/images/pets-sidebar/alligator.png" alt="">
+              </a>
+              </div>
+              <span class="tooltip tooltip-alligator">
+                <div class="tooltip-block">
+                  <h6 class="tooltip-heading">alligator,</h6>
+                  <p class="tooltip-location text">florida, USA</p>
+                </div>
+              </span>
+          </li>
+          <li class="sidebar-icon icon-active">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+              <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="">
+            </a>
+            </div>
+            <span class="tooltip tooltip-panda">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">panda,</h6>
+                <p class="tooltip-location text">china</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="/pages/zoos/eagle/eagle.html">
+              <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="">
+              </a>
+            </div>
+            <span class="tooltip tooltip-eagle">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">eagle,</h6>
+                <p class="tooltip-location text">california,USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="/pages/zoos/gorilla/gorilla.html">
+              <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="">
+              </a>
+            </div>
+            <span class="tooltip tooltip-gorilla">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">gorilla,</h6>
+                <p class="tooltip-location text">eastern DRC</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="">
+              </a>
+            </div>
+          </li>
+        </ul>
+      </aside>
+      <div class="container">
         <div class="heading-container">
           <h2 class="heading">panda</h2>
         </div>
@@ -53,7 +116,7 @@
               class="playlist__item main-item"
               width="1160"
               height="653"
-              src="https://www.youtube.com/embed/65JHo3Cy2tY?&autoplay=1"
+              src="https://www.youtube-nocookie.com/embed/65JHo3Cy2tY?&autoplay=1"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -63,7 +126,7 @@
               class="playlist__item item1"
               width="275"
               height="155"
-              src="https://www.youtube.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -73,7 +136,7 @@
               class="playlist__item item2"
               width="275"
               height="155"
-              src="https://www.youtube.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -83,7 +146,7 @@
               class="playlist__item item3"
               width="275"
               height="155"
-              src="https://www.youtube.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -93,7 +156,7 @@
               class="playlist__item item4"
               width="275"
               height="155"
-              src="https://www.youtube.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -104,40 +167,44 @@
       </div>
       <div class="info-container container">
         <div class="info">
-          <div class="info info1">
+          <div class="info info1 text">
             ZOO: The Shenshuping Gengda Panda Center (Sichuan, China)
           </div>
-          <div class="info info2">
+          <div class="info info2 text">
             ENCLOSURE TYPE: Imitation of the natural environment
           </div>
         </div>
         <div class="spoilers">
           <details class="spoiler-details spoiler-details1" open>
             <summary class="spoiler-summary">
-              <span>population</span>
+              <span class="text">population</span>
               </summary>
               <div class="spoiler-content">
-                <p class="spoiler-text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
+                <p class="spoiler-text text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
               </div>
           </details>
           <details class="spoiler-details spoiler-details2" open>
-            <summary class="spoiler-summary">habitat</summary>
+            <summary class="spoiler-summary">
+              <span class="text">habitat</span>
+            </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text">Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few provinces of southwestern China.</p>
+              <p class="spoiler-text text">Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few provinces of southwestern China.</p>
             </div>
           </details>
           <details class="spoiler-details spoiler-details3" open>
             <summary class="spoiler-summary">
-              <span>nutrition</span>
+              <span class="text">nutrition</span>
             </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text">Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.</p>
+              <p class="spoiler-text text">Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.</p>
             </div>
           </details>
           <details class="spoiler-details spoiler-details4" open>
-            <summary class="spoiler-summary">interesting facts</summary>
+            <summary class="spoiler-summary">
+              <span class="text">interesting facts</span>
+            </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text">Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their coat keeps them warm in the cool moist climate of the mountain forests.</p>
+              <p class="spoiler-text text">Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their coat keeps them warm in the cool moist climate of the mountain forests.</p>
             </div>
           </details>
         </div>
